fix(css): double scroll bar

--- a/src/assets/styles/partials/theme.scss
+++ b/src/assets/styles/partials/theme.scss
@@ -112,11 +112,10 @@ section {
 body {
   line-height: 1;
   background-color: var(--light-color);
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   height: 100%;
   font-weight: 400;
-  overflow-x: hidden;
   overscroll-behavior: none;
   overscroll-behavior-y: contain;
   text-rendering: optimizeLegibility;
@@ -2600,4 +2599,10 @@ ul.social li a.fa-google-plus:hover {
     50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
     75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
     100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+}
+
+@media (min-width: 981px) {
+  body {
+    overflow: visible;
+  }
 }
